# gaggimate

./: .gitignore  CLEANUP.md  clean.sh
ISSUES/: README.md  example-issue.md
schema/: shot_notes.json
sim/: .gitignore  CMakeLists.txt  Controller.h  EXAMPLES.md  QUICKSTART.md  README-ADDITION.md  README.md  SETUP-SUMMARY.md  TESTING.md  TEST_GUIDE.md  TEST_IMPLEMENTATION.md  TEST_README.md  build.sh  github-actions-example.yml  index.html  lv_conf.h  lv_conf_simulator.h  main.c  mouse_cursor_icon.c  serve.sh  test.sh  test_helpers.c  test_helpers.cpp  ui_event_stubs.cpp  ui_stubs.cpp  verify_caret.sh
src/display/ui/default/lvgl/: ui_events.h
src/display/ui/default/lvgl/screens/: ui_BrewScreen.c  ui_ProfileScreen.c
web/: test-shot-feedback.html
web/src/components/: ShotFeedback.tsx
web/src/pages/ShotHistory/: ShotNotesCard.jsx
web/src/utils/: shotFeedback.test.js  shotFeedback.ts
